--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -3,7 +3,7 @@
 NAME	= Unnecessary_violence
 CC		= c++
 RM		= rm -f
-FLAGS	= -Wall -Wextra -Werror -std=c++98
+FLAGS	= -g -Wall -Wextra -Werror -std=c++98
 
 ##########################################################
 ##	SRC && OBJ
